--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ rust: nightly
 env:
   global:
     - secure: XvYTUR5JGOQ+RcWEu4wkgbwZix7f+8n09JORdKH0cYIj68Em0KOX9oXm0VFwfrjhas9Mb8IhBxOdOJP5xzCRSjARA8Qu91ZA/ZPnN/hcARm/rqG737qPM5IRlxA6+nl5hvkRC7hA2OjpA4wrUJtrcOfZvF/UFVKOJ328dpWJ9bA=
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y liblua5.3-dev
+install: ./travis_install.sh
 script:
   - cargo build --verbose
   - cargo test --verbose
